--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>WHOIS? - ImAyx</title> 
   </head>
   <body>
-      <h1><a href="https://lookup.icann.org/en">ICANN Lookup</a></h1>
+      <h1><a href="https://lookup.icann.org/en">ICANN Lookup (English)</a></h1>
+      <h1><a href="https://lookup.icann.org/zh">ICANN Lookup（简体中文）</a></h1>
       <h1><a href="https://who.is/">WHO.IS [Unstable]</a></h1>
       <h1><a href="https://whois.chinaz.com/">Chinaz WHOIS</a></h1>
   </body>
